# django-upgrade

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .typos.toml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  django_upgrade.py  pyproject.toml  setup.cfg  test_force_str.py  tox.ini
.github/workflows/: main.yml
docs/: changelog.rst  conf.py  fixers.rst  index.rst  installation.rst  options.rst  origins.rst  usage.rst
docs/_static/: custom.css
requirements/: compile.py  py310.txt  py311.txt  py312.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/django_upgrade/: __main__.py  _ast_helpers.py  _data.py  _main.py  _token_helpers.py  ast.py  compat.py  data.py  main.py  tokens.py
src/django_upgrade/_plugins/: email_validator.py  jsonfield.py  password_reset_timeout_days.py  queryset_paginator.py  timezone_fixedoffset.py  utils_encoding.py
src/django_upgrade/fixers/: admin_allow_tags.py  admin_decorators.py  admin_lookup_needs_distinct.py  admin_register.py  apps_default_auto_field.py  assert_form_error.py  assert_set_methods.py  bad_header_error.py  check_constraint_condition.py  compatibility_imports.py  compatibility_imports_1_11.py  compatibility_imports_1_9.py  crypto_get_random_string.py  default_app_config.py  default_auto_field.py  django_urls.py  email_apis.py  email_validator.py  empty_result_set_exception.py  field_does_not_exist.py  format_html.py  forms_model_multiple_choice_field.py  gis_admin_deprecations.py  http_headers.py  index_together.py  jsonfield.py  mail_api_kwargs.py  mail_fail_silently.py  mail_get_connection.py  management_command.py  management_commands.py  model_field_choices.py  null_boolean_field.py  on_delete.py  password_reset_timeout_days.py  permalink.py  postgres_aggregate_order_by.py  postgres_float_range_field.py  queryset_paginator.py  redirect_reverse.py  (+32 more)
src/django_upgrade/plugins/: email_validator.py  jsonfield.py  password_reset_timeout_days.py  queryset_paginator.py  timezone_fixedoffset.py  utils_encoding.py
tests/: compat.py  test_ast.py  test_data.py  test_main.py  test_tokens.py
tests/fixers/: __init__.py  test_admin_allow_tags.py  test_admin_decorators.py  test_admin_lookup_needs_distinct.py  test_admin_register.py  test_apps_default_auto_field.py  test_assert_form_error.py  test_assert_set_methods.py  test_bad_header_error.py  test_check_constraint_condition.py  test_compatibility_imports.py  test_compatibility_imports_1_11.py  test_compatibility_imports_1_9.py  test_crypto_get_random_string.py  test_default_app_config.py  test_default_auto_field.py  test_django_urls.py  test_email_apis.py  test_email_validator.py  test_empty_result_set_exception.py  test_field_does_not_exist.py  test_format_html.py  test_forms_model_multiple_choice_field.py  test_functools.py  test_gis_admin_deprecations.py  test_http_headers.py  test_index_together.py  test_is_authenticated.py  test_jsonfield.py  test_mail_api_kwargs.py  test_mail_fail_silently.py  test_mail_get_connection.py  test_management_command.py  test_management_commands.py  test_model_field_choices.py  test_null_boolean_field.py  test_on_delete.py  test_password_reset_timeout_days.py  test_permalink.py  test_postgres_aggregate_order_by.py  (+34 more)
tests/plugins/: test_email_validator.py  test_jsonfield.py  test_password_reset_timeout_days.py  test_queryset_paginator.py  test_timezone_fixedoffset.py  test_utils_encoding.py  tools.py
tests/requirements/: compile.py  py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
