[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
]

[project]
name = "django-upgrade"
version = "1.30.0"
description = "Automatically upgrade your Django project code."
readme = "README.rst"
keywords = [
  "Django",
]
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Adam Johnson", email = "me@adamj.eu" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "tokenize-rt>=4.1",
]
urls.Changelog = "https://django-upgrade.readthedocs.io/en/latest/changelog.html"
urls.Documentation = "https://django-upgrade.readthedocs.io/"
urls.Funding = "https://adamj.eu/books/"
urls.Repository = "https://github.com/adamchainz/django-upgrade"
scripts.django-upgrade = "django_upgrade.main:main"

[dependency-groups]
test = [
  "coverage[toml]>=7.10",
  "pytest",
  "pytest-randomly",
]
docs = [
  "furo>=2024.8.6",
  "sphinx>=7.4.7",
  "sphinx-build-compatibility",
  "sphinx-copybutton>=0.5.2",
]

[tool.uv]
sources.sphinx-build-compatibility = { git = "https://github.com/readthedocs/sphinx-build-compatibility", rev = "4f304bd4562cdc96316f4fec82b264ca379d23e0" }

[tool.ruff]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
]
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
mypy_path = "src/"
namespace_packages = false
strict = true
warn_unreachable = true
overrides = [ { module = "tests.*", allow_untyped_defs = true } ]

[tool.pytest]
ini_options.addopts = """\
    --strict-config
    --strict-markers
    """
ini_options.xfail_strict = true

[tool.coverage]
run.branch = true
run.data_file = ".coverage/cov"
run.parallel = true
run.source = [
  "django_upgrade",
  "tests",
]
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.show_missing = true
report.skip_covered = true
report.skip_empty = true

[tool.rstcheck]
report_level = "ERROR"
