[metadata]
name = django-upgrade
version = 1.3.1
description = Automatically upgrade your Django projects.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/django-upgrade
project_urls =
    Changelog = https://github.com/adamchainz/django-upgrade/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = Django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    tokenize-rt >= 4.1.0
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    django-upgrade = django_upgrade.main:main

[coverage:run]
branch = True
source = django_upgrade

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I,TYP
ignore = E203,E501,W503
