[metadata]
name = django_upgrade
version = 1.13.0
description = Automatically upgrade your Django project code.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/django-upgrade
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords = Django
project_urls =
    Changelog = https://github.com/adamchainz/django-upgrade/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    tokenize-rt>=4.1.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    django-upgrade = django_upgrade.main:main

[coverage:run]
branch = True
parallel = True
source =
    django_upgrade
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
